--- a/index.html
+++ b/index.html
@@ -17,27 +17,28 @@
     <link rel="shortcut icon" href="#" type="image/x-icon">
 </head>
 <body>
-<div class="container roundBorder">
+<div class="container">
 <!-- Boton modal -->
 <!-- <button id="btn-abrir-modal">+</button> -->
 <!-- Ventana modal -->
-<div id="modal">
-    <div class="date">
-        <div class="dateRight">
-            <div id="dateNumber"></div>
-            <div>
-                <div id="dateMonth"></div>
-                <div id="dateYear"></div>
+<header>
+    <div id="modal">
+        <div class="date">
+            <div class="dateRight">
+                <div id="dateNumber"></div>
+                <div>
+                    <div id="dateMonth"></div>
+                    <div id="dateYear"></div>
+                </div>
             </div>
-        </div>
-        <div id="dateText"></div>
-</div>
-</div>
-
+            <div id="dateText"></div>
+    </div>
+    </div>
+    <div><h3>La Sole - Pastelería</h3></div>
+</header>
 <div class="containerApp">
     <!-- Aplicacion -->
     <div id="app" class="containerApp-form">
-        <div><h3>La Sole - Pastelería</h3></div>
         <div><h4>Agregar pedidos</h4></div>
         <form id="product-form" class="form">
             <div class="group-form">
@@ -72,7 +73,7 @@
         </form>
     </div>
     <div><h2>Lista de pedidos</h2></div>
-    <div id="product-list"></div>
+    <div id="productList"></div>
 </div>
 </div>
 
